# wizard-blog-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  TODO.md  configuration.yaml  docker-compose.yml  logs.txt
.github/workflows/: cd.yml  ci.yml
.sqlx/: query-1c9fb270e87482961263cc72896387cf99756393686b3b0c3727aaf37613fef3.json  query-205ecfee91a5c6a6e97a9ccb41d8fbdd59d3fa888373bc53988b55b19fcd0760.json  query-41a61e20038e0e0d5560d3ca5b8e3ab2079833d8c16207af56422b7e81d5a5c7.json  query-7cc15b16074d5d47694d1fda4db9429b3c70c61d1d3ed8d13ab8e188908f1e34.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20251218121307_create_subscriptions_table.sql  20260301185338_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs  utils.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  publish_newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
