[package]
name = "wizard_blog_backend"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "wizard_blog_backend"

[dependencies]
actix-web = "4"
chrono = "0.4.42"
config = "0.15.19"
once_cell = "1.21.3"
reqwest = "0.12.26"
serde = "1.0.228"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["registry", "env-filter"] }
uuid = { version = "1.19.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
