[package]
name = "wizard_blog_backend"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "wizard_blog_backend"

[dependencies]
actix-web = "4"
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
chrono = "0.4.42"
config = "0.15.19"
once_cell = "1.21.3"
rand = { version = "0.9.2", features = ["std_rng"] }
reqwest = {version = "0.12.26", features = ["json", "rustls-tls"]}
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.228"
serde-aux = "4.7.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full", "macros", "rt"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-actix-web = "0.7.20"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.19.0", features = ["v4"] }
validator = "0.20.0"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
claims = "0.8.0"
fake = "4.4.0"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
serde_json = "1.0.149"
wiremock = "0.6.5"
